# oord-agent

./: Makefile  __main__.py  pyproject.toml  pytest.ini
.github/workflows/: agent.yml
_ai/: agent-context-index.md
agent/: __init__.py  config.py  receiver.py  sender.py
api/app/models/: seal_manifest.py
cli/: oord_cli.py
docs/: ADR-008-oord-seal-v1.md  Agent-Runbook.md  Error-Model.md  Install-Guide.md
oord_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scripts/systemd/: oord-receiver.service  oord-sender.service
scripts/windows/: oord-agent-service.ps1
tests/agent/: test_agent_entrypoint.py  test_config_loading.py  test_receiver_logging.py  test_receiver_loop_basic.py  test_sender_logging.py  test_sender_loop_basic.py  test_sender_receiver_discovery.py
tests/cli/: test_oord_cli.py
tests/schemas/: manifest_v1.json
tests/utils/: test_seal_contracts.py
~/.oord/watch/exports/batch1/: a.txt
