[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oord-agent"
version = "0.1.0"
description = "Oord courier agent + CLI (seal/verify + sender/receiver watcher)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2,<3",
  "cryptography>=42",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[project.scripts]
oord = "cli.oord_cli:main"
oord-agent = "cli.oord_cli:agent_main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
namespaces = true
include = ["agent*", "api*", "cli*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [".git", ".venv", "_out", "gateway/_out", "build", "dist"]
